--- a/Week11/package.json
+++ b/Week11/package.json
@@ -25,7 +25,7 @@
     "mongoose": "^5.7.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.5",
