--- a/Week12/package.json
+++ b/Week12/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@google-cloud/text-to-speech": "^1.4.0",
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
